--- a/auth-service/src/main/resources/bootstrap.yml
+++ b/auth-service/src/main/resources/bootstrap.yml
@@ -13,10 +13,15 @@ spring:
         max-active: 4
         max-idle: 2
 
-eureka:
-  client:
-    register-with-eureka: false
-    fetch-registry: false
 
-  server:
-    enable-self-preservation: true
+eureka:
+  instance:
+    lease-expiration-duration-in-seconds: 5
+    lease-renewal-interval-in-seconds: 5
+    prefer-ip-address: true
+
+  client:
+    service-url:
+      registry-fetch-interval-seconds: 5
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+
