--- a/auth-service/src/main/resources/bootstrap.yml
+++ b/auth-service/src/main/resources/bootstrap.yml
@@ -12,16 +12,9 @@ spring:
     tomcat:
         max-active: 4
         max-idle: 2
-
-
-eureka:
-  instance:
-    lease-expiration-duration-in-seconds: 5
-    lease-renewal-interval-in-seconds: 5
-    prefer-ip-address: true
-
-  client:
-    service-url:
-      registry-fetch-interval-seconds: 5
-      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
-
+  cloud:
+    config:
+      uri: http://localhost:8888
+      username: config_user
+      password: config_password
+      name: ureka
