--- a/auth-service/src/main/resources/bootstrap.yml
+++ b/auth-service/src/main/resources/bootstrap.yml
@@ -1,20 +1,12 @@
 server:
-  port: ${PORT:8123}
+  port: ${PORT:8001}
 
 spring:
   application:
     name: auth-service
-  datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/database?useSSL=false
-    username: username
-    password: password
-    tomcat:
-        max-active: 4
-        max-idle: 2
   cloud:
     config:
-      uri: http://localhost:8888
+      uri: ${CONFIG_SERVICE_URI:http://127.0.0.1:8888}
       username: config_user
       password: config_password
-      name: ureka
+      name: ureka, mysql-system
